PyMaker/datas/object2/RawHTML/i4801/Python_DOC_referPages.learn-python-the-hard-way-ex-41-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>I keep receiving SyntaxError message on ex41.py OR oop_test.py, and I've run through the whole script, everything is exactly as it is in the book, but I keep getting this - the variable {answer} is seemingly only defined in the try: section, so I have no clue why I am getting this SyntaxError.</p>
<p><code>***:hardway ***$ python ex41.py english
  File "ex41.py", line 76
    print(f"ANSWER: {answer}\n\n")
                                ^
SyntaxError: invalid syntax</code></p>
<p>Here is the try: section, where the variable is at:</p>
<pre><code>try:
    while True:
        snippets = list(PHRASES.keys())
        random.shuffle(snippets)

        for snippet in snippets:
            phrase = PHRASES[snippet]
            question, answer = convert(snippet, phrase)
            if PHRASE_FIRST:
                question, answer = answer, question

            print(question)

            input("&gt; ")
            print(f"ANSWER: {answer}\n\n")

except EOFError:
    print("\nBye") `
</code></pre>
<p>The entirety of the code can be found here: <a href="https://stackoverflow.com/questions/46135191/learning-python-the-hard-way-ex-41-learning-to-speak-object-oriented">Learning Python The hard way Ex. 41 - Learning to Speak Object-Oriented</a></p>
</div>
<div class="post-text" itemprop="text">
<p>Your code looks fine.  The problem is the Python version you are running.</p>
<p>As mentioned in the comments above f strings were first introduced in Python 3.6 (see <a href="https://docs.python.org/3/whatsnew/3.6.html#pep-498-formatted-string-literals" rel="nofollow noreferrer">official documentation</a>). If you want to use this feature you need to update to Python 3.6.  </p>
<p>If you do not (or cannot) switch version you can use <code>format()</code> instead: </p>
<pre><code>  print("ANSWER: {}\n\n".format(answer))
</code></pre>
<p>OR use the old style <code>%s</code> (formatting string) operator:</p>
<pre><code>  print("ANSWER: %s\n\n" %answer)
</code></pre>
<p>See: <a href="https://stackoverflow.com/questions/997797/what-does-s-mean-in-python">What does %s mean in Python?</a></p>
<p>I would suggest <code>format()</code> over the second method though.</p>
<p>If you are making code that will be run on Python versions before Python 3.6 it it a good idea to use the alternatives listed above. </p>
</div>
<span class="comment-copy">Please use python3.6 to run this code, where <code>f</code> strings are first introduced.</span>
<span class="comment-copy">thank you for your words, will try this!!</span>
<span class="comment-copy">haha, I'm pretty novice, and this definitely worked...lesson learned.</span>
<span class="comment-copy">@SamParsons  Since you are still learning Python, can I suggest you update to Python 3.6 (or the latest version) so that you get all the newest features, but if you can't never mind...</span>
